# STM32_USBVolumeControl

./: .gitmodules  CMakeLists.txt  myCode.cpp
HID/: CMakeLists.txt
